Show effective tunnel status
